--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="window">
             <div class="left">
-                <img class="hearimg" src="/img/LoGo.jpg" alt="">
+                <img class="hearimg" src="img/LoGo.jpg" alt="">
                 <h2>氢気氚|qinch</h2>
                 <span></span>
             </div>
