--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left">
                 <img class="hearimg" src="img/LoGo.jpg" alt="">
                 <h2>氢気氚|qinch</h2>
-                <span></span>
+                <span>重构版</span>
             </div>
             <div class="right"></div>
         </div>
