--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="root">
-        <img class="background" src="img/baclground.jpg" alt="">
-        <div class="info">
-            <h2>The background image by</h2>
-            <h3>Microsoft Surface PC's background. </h3>
-        </div>
         <div class="window">
             <div class="left">
                 <img class="hearimg" src="img/LoGo.jpg" alt="">
-                <h2>氢気氚|qinch</h2>
-                <span>重构版</span>
+                <h2 style="color: wheat;">氢気氚|qinch</h2>
+                <span></span>
             </div>
             <div class="right"></div>
         </div>
-    </div>
+        <div class="bg">
+            <img class="background" src="img/baclground.jpg" alt="">
+            <div class="info">
+                <h2>The background image by</h2>
+                <h3>Microsoft Surface PC's background. </h3>
+            </div>
+        </div>
 </body>
 </html>
