增加背景随时间变化

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" id="root">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 <body>
         <div class="window">
@@ -16,7 +17,7 @@
             <div class="right"></div>
         </div>
         <div class="bg">
-            <img class="background" src="img/baclground.jpg" alt="">
+            <img class="background" src="img/drak.png" alt="">
             <div class="info">
                 <h2>The background image by</h2>
                 <h3>Microsoft Surface PC's background. </h3>
