--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
     <script src="main.js"></script>
 </head>
 <body>
-        <div class="window">
-            <div class="left">
-                <img class="hearimg" src="img/LoGo.jpg" alt="">
-                <h2 style="color: wheat;">氢気氚|qinch</h2>
-                <span></span>
-            </div>
-            <div class="right"></div>
+    <div class="window">
+        <div class="left">
+            <img class="hearimg" src="img/LoGo.jpg" alt="">
+            <h1 class="hearimgtext"  style="color: wheat;">氢気氚|qinch</h1>
+            <span class="hearimgtext">这是一个普通的个人网站...</span>
+            <a href="www.bing.cn" class="test">bing</a>
+            <div class="hr"></div>
         </div>
-        <div class="bg">
-            <img class="background" src="img/drak.png" alt="">
-            <div class="info">
-                <h2>The background image by</h2>
-                <h3>Microsoft Surface PC's background. </h3>
+        <div class="right">
+            <div class="items">
+                <h1>Test</h1>
+                <p>This is a text</p>
+            </div>
+            <div class="items">
+                <h1>Test</h1>
+                <p>This is a text</p>
             </div>
         </div>
+    </div>
+    <div class="bg">
+        <img class="background" src="img/drak.png" alt="">
+        <div class="info">
+            <h2>The background image by</h2>
+            <h3>Microsoft Surface PC's background. </h3>
+        </div>
+    </div>
 </body>
 </html>
