--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="right">
             <div class="items">
                 <h1>Test</h1>
-                <p>This is a text</p>
+                <p>This is a texts</p>
             </div>
             <div class="items">
                 <h1>Test</h1>
-                <p>This is a text</p>
+                <p>This is a texts</p>
             </div>
         </div>
     </div>
