--- a/index.html
+++ b/index.html
@@ -11,27 +11,47 @@
     <div class="window">
         <div class="left">
             <img class="hearimg" src="img/LoGo.jpg" alt="">
-            <h1 class="hearimgtext"  style="color: wheat;">氢気氚|qinch</h1>
+            <h1 class="hearimgtext">氢気氚|qinch</h1>
             <span class="hearimgtext">这是一个普通的个人网站...</span>
             <a href="www.bing.cn" class="test">bing</a>
             <div class="hr"></div>
         </div>
         <div class="right">
             <div class="items">
-                <h1>Test</h1>
-                <p>This is a texts</p>
+                <img src="ico/doc/doc_light.svg" class="items_doc">
+                <div class="items_div">
+                    <h1 class="item_text">文档</h1>
+                    <p class="item_text">该页面记录了一些教程文档</p>
+                </div>
             </div>
             <div class="items">
-                <h1>Test</h1>
-                <p>This is a texts</p>
+                <img src="ico/project/project_light.svg" class="items_project"></img>
+                <div class="items_div">
+                    <h1 class="item_text">项目</h1>
+                    <p class="item_text">已经完成的项目与正在进行中的项目</p>
+                </div>
+            </div>
+            <div class="items">
+                <img src="ico/contact/contact_light.svg" class="items_contact"></img>
+                <div class="items_div">
+                    <h1 class="item_text">联系</h1>
+                    <p class="item_text">您可以通过以下方式联系到我</p>
+                </div>
+            </div>
+            <div class="items">
+                <img src="ico/about/about_light.svg" class="items_about"></img>
+                <div class="items_div">
+                    <h1 class="item_text">关于</h1>
+                    <p class="item_text">关于这个网站...</p>
+                </div>
             </div>
         </div>
     </div>
     <div class="bg">
         <img class="background" src="img/drak.png" alt="">
         <div class="info">
-            <h2>The background image by</h2>
-            <h3>Microsoft Surface PC's background. </h3>
+            <h2>The Background Image By</h2>
+            <h3>Microsoft Surface PC's Wallpaper. </h3>
         </div>
     </div>
 </body>
