--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p class="item_text">已经完成的项目与正在进行中的项目</p>
                 </div>
             </div>
-            <div class="items" id="contact">
+            <div class="items" id="contact" onclick="jump_view('Page/call.html')">
                 <img src="ico/contact/contact_light.svg" class="items_contact"></img>
                 <div class="items_div">
                     <h1 class="item_text">联系</h1>
