--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>氢気氚的个人网站</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="main.js"></script>
+    <link rel="icon" type="image/jpg" href="img/LoGo.jpg">
 </head>
 <body>
     <div class="window">
