--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>氢気氚的个人网站</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="main.js"></script>
-    <link rel="icon" type="image/jpg" href="img/LoGo.jpg">
+    <link rel="icon" type="image/jpg" href="img/LoGo.jpg?v=2">
 </head>
 <body>
     <div class="window">
