--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="item_text">您可以通过以下方式联系到我</p>
                 </div>
             </div>
-            <div class="items" id="about">
+            <div class="items" id="about" onclick="jump_view('Page/about.html')">
                 <img src="ico/about/about_light.svg" class="items_about"></img>
                 <div class="items_div">
                     <h1 class="item_text">关于</h1>
