--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>氢気氚的个人网站</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="main.js"></script>
-    <link rel="icon" type="image/jpg" href="img/LoGo.jpg?v=2">
+    <link rel="icon" type="image/jpg" href="img/LoGo.png?v=2">
 </head>
 <body>
     <div class="window">
         <div class="left">
-            <img class="hearimg" src="img/LoGo.jpg" alt="">
+            <img class="hearimg" src="img/LoGo.png" alt="">
             <h1 class="hearimgtext">氢気氚|qinch</h1>
             <span class="hearimgtext">这是一个普通的个人网站...</span>
             <div class="hr"></div>
