更改界面，更新内容🎉

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>氢気氚的个人网站</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <script src="main.js"></script>
     <link rel="icon" type="image/jpg" href="img/LoGo.png?v=2">
 </head>
@@ -14,7 +15,6 @@
             <img class="hearimg" src="img/LoGo.png" alt="">
             <h1 class="hearimgtext">氢気氚|qinch</h1>
             <span class="hearimgtext">这是一个普通的个人网站...</span>
-            <div class="hr"></div>
         </div>
         <div class="right">
             <div class="items" id="doc" onclick="jump_view('Page/doc.html')">
