feat: 添加BMI计算器页面及相关样式

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <img class="hearimg" src="img/LoGo.png" alt="">
             <h1 class="hearimgtext">氢気氚|qinch</h1>
             <span class="hearimgtext">这是一个普通的个人网站...</span>
+            <a href="Page/tools.html" id="tools">小工具</a>
         </div>
         <div class="right">
             <div class="items" id="doc" onclick="jump_view('Page/doc.html')">
