style(ui): 调整.items和#tools的样式

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="left">
             <img class="hearimg" src="img/LoGo.png" alt="">
             <h1 class="hearimgtext">氢気氚|qinch</h1>
-            <span class="hearimgtext" id="everyText" style="text-align: center;">这是一个普通的个人网站...</span>
+            <span class="hearimgtext" id="everyText" style="text-align: center;margin-bottom: 1rem;">这是一个普通的个人网站...</span>
             <a href="Page/tools.html" id="tools">小工具</a>
         </div>
         <div class="right">
