style: 调整图标宽度并添加样式
将文档、项目、联系和关于部分的图标宽度从1rem调整为2rem。
style.css中添加了`user-select: none;`，防止用户选择背景内容。

在style.css中添加了`preloadimg`类，用于隐藏预加载图片。

在index.html中，将各个图标元素的class从`item`更改为对应的`items_doc`、`items_project`、`items_contact`和`items_about`，以便应用新的宽度样式。

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
         </div>
         <div class="right">
             <div class="items" id="doc" onclick="jump_view('Page/doc.html')">
-                <img src="ico/doc/doc_light.svg" class="item">
+                <img src="ico/doc/doc_light.svg" class="items_doc">
                 <div class="items_div">
                     <h1 class="item_text">文档</h1>
                     <p class="item_text">该页面记录了一些教程文档</p>
                 </div>
             </div>
             <div class="items" id="project" onclick="jump_view('Page/project.html')">
-                <img src="ico/project/project_light.svg" class="item"></img>
+                <img src="ico/project/project_light.svg" class="items_project"></img>
                 <div class="items_div">
                     <h1 class="item_text">项目</h1>
                     <p class="item_text">已经完成的项目与正在进行中的项目</p>
                 </div>
             </div>
             <div class="items" id="contact" onclick="jump_view('Page/call.html')">
-                <img src="ico/contact/contact_light.svg" class="item"></img>
+                <img src="ico/contact/contact_light.svg" class="items_contact"></img>
                 <div class="items_div">
                     <h1 class="item_text">联系</h1>
                     <p class="item_text">您可以通过以下方式联系到我</p>
                 </div>
             </div>
             <div class="items" id="about" onclick="jump_view('Page/about.html')">
-                <img src="ico/about/about_light.svg" class="item"></img>
+                <img src="ico/about/about_light.svg" class="items_about"></img>
                 <div class="items_div">
                     <h1 class="item_text">关于</h1>
                     <p class="item_text">关于这个网站...</p>
